@@ -255,6 +255,8 @@ xsltNewStylesheet(void) {
     cur->standalone = -1;
     cur->decimalFormat = xsltNewDecimalFormat(NULL);
     cur->indent = -1;
+    cur->errors = 0;
+    cur->warnings = 0;
     return(cur);
 }
 
@@ -374,6 +376,7 @@ xsltParseStylesheetOutput(xsltStylesheetPtr style, xmlNodePtr cur) {
 		if (ns == NULL) {
 		    xsltGenericError(xsltGenericErrorContext,
 			"no namespace bound to prefix %s\n", prefix);
+		    style->warnings++;
 		    xmlFree(prefix);
 		    xmlFree(ncname);
 		    style->method = prop;
@@ -395,6 +398,7 @@ xsltParseStylesheetOutput(xsltStylesheetPtr style, xmlNodePtr cur) {
 	    } else {
 		xsltGenericError(xsltGenericErrorContext,
 		    "invalid value for method: %s\n", prop);
+		style->warnings++;
 	    }
 	}
     }
@@ -421,6 +425,7 @@ xsltParseStylesheetOutput(xsltStylesheetPtr style, xmlNodePtr cur) {
 	} else {
 	    xsltGenericError(xsltGenericErrorContext,
 		"invalid value for standalone: %s\n", prop);
+	    style->warnings++;
 	}
 	xmlFree(prop);
     }
@@ -435,6 +440,7 @@ xsltParseStylesheetOutput(xsltStylesheetPtr style, xmlNodePtr cur) {
 	} else {
 	    xsltGenericError(xsltGenericErrorContext,
 		"invalid value for indent: %s\n", prop);
+	    style->warnings++;
 	}
 	xmlFree(prop);
     }
@@ -449,6 +455,7 @@ xsltParseStylesheetOutput(xsltStylesheetPtr style, xmlNodePtr cur) {
 	} else {
 	    xsltGenericError(xsltGenericErrorContext,
 		"invalid value for omit-xml-declaration: %s\n", prop);
+	    style->warnings++;
 	}
 	xmlFree(prop);
     }
@@ -493,45 +500,49 @@ xsltParseStylesheetOutput(xsltStylesheetPtr style, xmlNodePtr cur) {
  * and record the formatting characteristics
  */
 static void
-xsltParseStylesheetDecimalFormat(xsltStylesheetPtr sheet, xmlNodePtr cur)
+xsltParseStylesheetDecimalFormat(xsltStylesheetPtr style, xmlNodePtr cur)
 {
     xmlChar *prop;
     xsltDecimalFormatPtr format;
     xsltDecimalFormatPtr iter;
     
-    if ((cur == NULL) || (sheet == NULL))
+    if ((cur == NULL) || (style == NULL))
 	return;
 
-    format = sheet->decimalFormat;
+    format = style->decimalFormat;
     
     prop = xmlGetNsProp(cur, BAD_CAST("name"), XSLT_NAMESPACE);
     if (prop != NULL) {
-	format = xsltDecimalFormatGetByName(sheet, prop);
+	format = xsltDecimalFormatGetByName(style, prop);
 	if (format != NULL) {
 	    xsltGenericError(xsltGenericErrorContext,
-			     "xsltParseStylesheetDecimalFormat: %s already exists\n", prop);
+	 "xsltParseStylestyleDecimalFormat: %s already exists\n", prop);
+	    style->warnings++;
 	    return;
 	}
 	format = xsltNewDecimalFormat(prop);
 	if (format == NULL) {
 	    xsltGenericError(xsltGenericErrorContext,
-			     "xsltParseStylesheetDecimalFormat: failed creating new decimal-format\n");
+     "xsltParseStylestyleDecimalFormat: failed creating new decimal-format\n");
+	    style->errors++;
 	    return;
 	}
 	/* Append new decimal-format structure */
-	for (iter = sheet->decimalFormat; iter->next; iter = iter->next)
+	for (iter = style->decimalFormat; iter->next; iter = iter->next)
 	    ;
 	if (iter)
 	    iter->next = format;
     }
 
-    prop = xmlGetNsProp(cur, (const xmlChar *)"decimal-separator", XSLT_NAMESPACE);
+    prop = xmlGetNsProp(cur, (const xmlChar *)"decimal-separator",
+	                XSLT_NAMESPACE);
     if (prop != NULL) {
 	if (format->decimalPoint != NULL) xmlFree(format->decimalPoint);
 	format->decimalPoint  = prop;
     }
     
-    prop = xmlGetNsProp(cur, (const xmlChar *)"grouping-separator", XSLT_NAMESPACE);
+    prop = xmlGetNsProp(cur, (const xmlChar *)"grouping-separator",
+	                XSLT_NAMESPACE);
     if (prop != NULL) {
 	if (format->grouping != NULL) xmlFree(format->grouping);
 	format->grouping  = prop;
@@ -579,7 +590,8 @@ xsltParseStylesheetDecimalFormat(xsltStylesheetPtr sheet, xmlNodePtr cur)
 	format->digit  = prop;
     }
     
-    prop = xmlGetNsProp(cur, (const xmlChar *)"pattern-separator", XSLT_NAMESPACE);
+    prop = xmlGetNsProp(cur, (const xmlChar *)"pattern-separator",
+	                XSLT_NAMESPACE);
     if (prop != NULL) {
 	if (format->patternSeparator != NULL) xmlFree(format->patternSeparator);
 	format->patternSeparator  = prop;
@@ -607,6 +619,7 @@ xsltParseStylesheetPreserveSpace(xsltStylesheetPtr style, xmlNodePtr cur) {
     if (elements == NULL) {
 	xsltGenericError(xsltGenericErrorContext,
 	    "xsltParseStylesheetPreserveSpace: missing elements attribute\n");
+	style->warnings++;
 	return;
     }
 
@@ -683,6 +696,7 @@ xsltParseStylesheetExtPrefix(xsltStylesheetPtr style, xmlNodePtr cur) {
 		xsltGenericError(xsltGenericErrorContext,
 	    "xsl:extension-element-prefix : undefined namespace %s\n",
 	                         prefix);
+		style->warnings++;
 	    } else {
 #ifdef WITH_XSLT_DEBUG_PARSING
 		xsltGenericDebug(xsltGenericDebugContext,
@@ -718,6 +732,7 @@ xsltParseStylesheetStripSpace(xsltStylesheetPtr style, xmlNodePtr cur) {
     if (elements == NULL) {
 	xsltGenericError(xsltGenericErrorContext,
 	    "xsltParseStylesheetStripSpace: missing elements attribute\n");
+	style->warnings++;
 	return;
     }
 
@@ -872,6 +887,7 @@ xsltGatherNamespaces(xsltStylesheetPtr style) {
 			if (style->nsHash == NULL) {
 			    xsltGenericError(xsltGenericErrorContext,
 		 "xsltGatherNamespaces: failed to create hash table\n");
+			    style->errors++;
 			    return;
 			}
 		    }
@@ -879,6 +895,7 @@ xsltGatherNamespaces(xsltStylesheetPtr style) {
 		    if ((URI != NULL) && (!xmlStrEqual(URI, ns->href))) {
 			xsltGenericError(xsltGenericErrorContext,
 	     "Namespaces prefix %s used for multiple namespaces\n");
+			style->warnings++;
 		    } else if (URI == NULL) {
 			xmlHashUpdateEntry(style->nsHash, ns->prefix,
 			    (void *) ns->href, (xmlHashDeallocator)xmlFree);
@@ -964,6 +981,7 @@ xsltParseTemplateContent(xsltStylesheetPtr style, xsltTemplatePtr ret,
 			(cur->children->next != NULL)) {
 			xsltGenericError(xsltGenericErrorContext,
 	     "xsltParseTemplateContent: xslt:text content problem\n");
+			style->errors++;
 		    } else {
 			xmlChar *prop;
 			xmlNodePtr text = cur->children;
@@ -982,6 +1000,7 @@ xsltParseTemplateContent(xsltStylesheetPtr style, xsltTemplatePtr ret,
 					            (const xmlChar *)"no")){
 				xsltGenericError(xsltGenericErrorContext,
 		 "xslt:text: disable-output-escaping allow only yes or no\n");
+				style->warnings++;
 
 			    }
 			    xmlFree(prop);
@@ -1061,6 +1080,7 @@ skip_children:
             cur = cur->next;
 	    xsltGenericError(xsltGenericErrorContext,
 		"xsltParseStylesheetTop: ignoring misplaced param element\n");
+	    style->warnings++;
 	    xmlUnlinkNode(param);
 	    xmlFreeNode(param);
 	    continue;
@@ -1107,6 +1127,7 @@ xsltParseStylesheetKey(xsltStylesheetPtr style, xmlNodePtr key) {
 		if (ns == NULL) {
 		    xsltGenericError(xsltGenericErrorContext,
 			"no namespace bound to prefix %s\n", prefix);
+		    style->warnings++;
 		    xmlFree(prefix);
 		    xmlFree(name);
 		    name = prop;
@@ -1131,6 +1152,7 @@ xsltParseStylesheetKey(xsltStylesheetPtr style, xmlNodePtr key) {
     } else {
 	xsltGenericError(xsltGenericErrorContext,
 	    "xsl:key : error missing name\n");
+	style->errors++;
 	goto error;
     }
 
@@ -1138,6 +1160,7 @@ xsltParseStylesheetKey(xsltStylesheetPtr style, xmlNodePtr key) {
     if (match == NULL) {
 	xsltGenericError(xsltGenericErrorContext,
 	    "xsl:key : error missing match\n");
+	style->errors++;
 	goto error;
     }
 
@@ -1145,6 +1168,7 @@ xsltParseStylesheetKey(xsltStylesheetPtr style, xmlNodePtr key) {
     if (use == NULL) {
 	xsltGenericError(xsltGenericErrorContext,
 	    "xsl:key : error missing use\n");
+	style->errors++;
 	goto error;
     }
 
@@ -1209,6 +1233,7 @@ xsltParseStylesheetTemplate(xsltStylesheetPtr style, xmlNodePtr template) {
 		if (ns == NULL) {
 		    xsltGenericError(xsltGenericErrorContext,
 			"no namespace bound to prefix %s\n", prefix);
+		    style->warnings++;
 		    xmlFree(prefix);
 		    xmlFree(mode);
 		    mode = prop;
@@ -1266,6 +1291,7 @@ xsltParseStylesheetTemplate(xsltStylesheetPtr style, xmlNodePtr template) {
 		if (ns == NULL) {
 		    xsltGenericError(xsltGenericErrorContext,
 			"no namespace bound to prefix %s\n", prefix);
+		    style->warnings++;
 		    xmlFree(prefix);
 		    xmlFree(ncname);
 		    ret->name = prop;
@@ -1319,11 +1345,13 @@ xsltParseStylesheetTop(xsltStylesheetPtr style, xmlNodePtr top) {
     if (prop == NULL) {
 	xsltGenericError(xsltGenericErrorContext,
 	    "xsl:version is missing: document may not be a stylesheet\n");
+	style->warnings++;
     } else {
 	if (!xmlStrEqual(prop, (const xmlChar *)"1.0")) {
 	    xsltGenericError(xsltGenericErrorContext,
 		"xsl:version: only 1.0 features are supported\n");
 	     /* TODO set up compatibility when not XSLT 1.0 */
+	    style->warnings++;
 	}
 	xmlFree(prop);
     }
@@ -1365,6 +1393,7 @@ xsltParseStylesheetTop(xsltStylesheetPtr style, xmlNodePtr top) {
 	if (IS_XSLT_NAME(cur, "import")) {
 	    xsltGenericError(xsltGenericErrorContext,
 		"xsltParseStylesheetTop: ignoring misplaced import element\n");
+	    style->errors++;
         } else if (IS_XSLT_NAME(cur, "include")) {
 	    xsltParseStylesheetInclude(style, cur);
         } else if (IS_XSLT_NAME(cur, "strip-space")) {
@@ -1394,6 +1423,7 @@ xsltParseStylesheetTop(xsltStylesheetPtr style, xmlNodePtr top) {
 	    xsltGenericError(xsltGenericErrorContext,
 		"xsltParseStylesheetTop: ignoring unknown %s element\n",
 		             cur->name);
+	    style->warnings++;
 	}
 	cur = cur->next;
     }
@@ -1471,6 +1501,7 @@ xsltParseStylesheetProcess(xsltStylesheetPtr ret, xmlDocPtr doc) {
 	    xsltGenericError(xsltGenericErrorContext,
 		"xsl:version: only 1.0 features are supported\n");
 	     /* TODO set up compatibility when not XSLT 1.0 */
+	    ret->warnings++;
 	}
 	xmlFree(prop);
 
