@@ -1,0 +1,3 @@
+<ns:root xmlns:ns="whatever">
+  <something/>
+</ns:root>
